--- a/src/App.css
+++ b/src/App.css
@@ -128,3 +128,18 @@ h1 {
 .result-item:hover {
   background: #abdbe3;
 }
+
+.about-content {
+  display: flex;
+  padding-top: 2em;
+}
+
+/* dla telefonow mniejszy font w inpucie */
+@media only screen and (max-width: 700px) {
+  .about-content {
+    flex-direction: column;
+  }
+  .about-content > img {
+    align-self: center;
+  }    
+}
